--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,24 +1,26 @@
 {
 	"tasks": {
-		// ✅ Tarea para iniciar el servidor en modo producción
 		"start": "deno run --allow-net --allow-env --allow-write --allow-read main.ts",
-		// 🔄 Tarea para desarrollo con recarga automática
 		"dev": "deno run --allow-net --allow-env --allow-write --allow-read --watch main.ts",
-		// 🔨 Tarea para compilar el proyecto
-		"compile": "deno compile --allow-net --allow-write --allow-read main.ts",
-		// 🔍 Tarea para iniciar Drizzle Studio
-		"studio": "drizzle-kit studio --port 8081"
+		"compile": "deno compile --allow-net --allow-write --allow-read main.ts"
 	},
 	"fmt": {
-		// 📏 Usar tabs para la indentación
 		"useTabs": true,
 		"lineWidth": 100,
 		"indentWidth": 4,
 		"semiColons": true,
 		"singleQuote": true
 	},
-	"importMap": "./deno-import-map.json",
+	"imports": {
+		"oak": "jsr:@oak/oak",
+		"handlebars": "npm:handlebars",
+		"path": "jsr:@std/path",
+		"dotenv": "jsr:@std/dotenv",
+		"sequelize": "npm:sequelize@^6.37.7",
+		"sqlite3": "npm:sqlite3@^5.1.7"
+	},
 	"compilerOptions": {
 		"lib": ["deno.window"]
-	}
+	},
+	"nodeModulesDir": "auto"
 }
